# jagovfaq-bot

./: .gitignore  README.md  app.py  indexer.py  prompt_loader.py  pyproject.toml  text_utils.py
.codex/: config.toml
app/: app.py
app/core/: candidate.py  config.py  llm.py  logging.py  retriever.py  store.py  text_utils.py  types.py
app/graph/: builder.py  export.py  node_logging.py
app/graph/subgraphs/: __init__.py  evidence.py  rag.py
app/indexer/: indexer.py
app/nodes/: evidence.py  evidence_finalize.py  evidence_llm.py  evidence_router.py  evidence_rules_strict.py  hitl.py  qa.py  restore_topk_meta.py  retrieval.py  routing.py  rrf.py  standalone_question.py  topk_filter.py  web.py
app/prompts/: loader.py
app/prompts/templates/: ask_clarification.ja.txt  ask_clarification.system.ja.txt  ask_clarification.user.ja.txt  evidence_judge.system.ja.txt  evidence_judge.user.ja.txt  generate_answer.ja.txt  generate_answer.system.ja.txt  generate_answer.user.ja.txt  generate_answer_with_web.user.ja.txt  (+3 more)
prompts/: ask_clarification.ja.txt  generate_answer.ja.txt
tests/: test_answer_web_integration.py  test_cli_export_graph_args.py  test_cli_interrupt_modes.py  test_cli_retrievers_option.py  test_evidence_assess.py  test_evidence_finalize.py  test_evidence_llm.py  test_evidence_router.py  test_evidence_rules_strict.py  test_graph_export_xray.py  test_graph_retrieval_split.py  test_restore_topk_meta.py  test_retrieve_all.py  test_retriever_id_centric.py  test_retriever_registry.py  test_routing.py  test_rrf_generic.py  test_web_permission.py  test_web_search.py
